[tool.poetry]
name = "marcel-data-engineering-start"
version = "0.1.0"
description = ""
authors = ["Ulrich Ludmann <uli@ul-cps.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11"
pandas = "^2.1.1"
jupyterlab = "^4.0.6"
matplotlib = "^3.8.0"
numpy = "^1.26.0"
tensorflow-probability = "^0.22.0"
torch = "^2.1.0"
torchvision = "^0.16.0"
torchaudio = "^2.1.0"
tensorflow = "^2.14.0"

[tool.poetry.group.dev.dependencies]
black = "^23.9.1"
isort = "^5.12.0"
ruff = "^0.0.292"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
